--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,20 +1,19 @@
 <aside>
 	<div class="panel radius">
-		<h3>Sidebar</h3>
+		<h3>Welcome to the NCSM Fishes Unit Blog pages!</h3>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			
+			<br>
+			<br> The NCSM Fishes Unit maintains an active and growing natural history collection, engages in cutting-edge dynamic research, and is committed to understanding patterns of aquatic biodiversity from the Carolinas to the world. 
+			<br>
+			<br> Given this broad scope, we have several active blog areas to highlight the latest news from our team as well as discoveries from our collaborators and things we find fascinating. 
+			<br>
+			<br>Check out the latest posts or explore the archives!
 		</p>
 	</div>
 
-  <img class="b30" src="http://dummyimage.com/303x16:9/df4949/e27b3f.png&amp;text=Ugly+Ad+Space" alt="">
+  <img class="b30" src="https://carolinafishes.github.io/images/coral.jpg" alt="">
 
 
-	<div class="border-dotted radius b30">
-		<img src="http://placekitten.com/271/270" alt="uh, Placekitten">
-		<p class="text-left">
-			This is an advertisment with a crazy cat! <a href="http://placekitten.com/">More cats, please!</a>
-		</p>
-	</div>
+
 </aside>
