--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -4,4 +4,13 @@ layout: compress
 <!doctype html>
 <html class="no-js" lang="{% if site.language == nil %}en{% else %}{{ site.language }}{% endif %}">
 
+<body id="top-of-page" class="{{ layout.format }}">
+
+
+	{% include _masthead.html %}
+	{{ content }}
+
+
+</body>
+
 </html>
