--- a/_layouts/page2.html
+++ b/_layouts/page2.html
@@ -2,4 +2,15 @@
 layout: default2
 format: post
 ---
+<article itemscope itemtype="http://schema.org/Article">
+			
 
+			
+
+			<div itemprop="articleSection">
+			{{ content }}
+			</div>
+
+			
+		</article>
+	</div><!-- /.medium-8.columns -->
