--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4113,21 +4113,24 @@ input, select, textarea {
 
 	/* For stacking text */
 	.parent {
-display: inline-flex;
+display: flex;
 flex-wrap:wrap;
-grid-template-columns: 1fr;
+flex-direction: column;
+/*grid-template-columns: 1fr;
 grid-template-rows: repeat(10, 1fr);
 grid-column-gap: 0px;
-grid-row-gap: 0px;
+grid-row-gap: 0px; */
 }
 
-.div1 { grid-area: 1 / 1 / 2 / 2; margin:0.75em;}
-.div2 { grid-area: 2 / 1 / 3 / 2; margin:0.75em;}
-.div3 { grid-area: 3 / 1 / 4 / 2; margin:0.75em;}
-.div4 { grid-area: 4 / 1 / 5 / 2; margin:0.75em;}
-.div5 { grid-area: 5 / 1 / 6 / 2; margin:0.75em;}
-.div6 { grid-area: 6 / 1 / 7 / 2; margin:0.75em;}
-.div7 { grid-area: 7 / 1 / 8 / 2; margin:0.75em;}
-.div8 { grid-area: 8 / 1 / 9 / 2; margin:0.75em;}
-.div9 { grid-area: 9 / 1 / 10 / 2; margin:0.75em;}
-.div10 { grid-area: 10 / 1 / 11 / 2; margin:0.75em;}
+.div1 { min-width:200px; flex:1; margin:0.125em;}
+.div2 { min-width:200px; flex:1; margin:0.125em;}
+.div3 { min-width:200px; flex:1; margin:0.125em;}
+.div4 { min-width:200px; flex:1; margin:0.125em;}
+.div5 { min-width:200px; flex:1; margin:0.125em;}
+.div6 { min-width:200px; flex:1; margin:0.125em;}
+.div7 { min-width:200px; flex:1; margin:0.125em;}
+.div8 { min-width:200px; flex:1; margin:0.125em;}
+.div9 { min-width:200px; flex:1; margin:0.125em;}
+.div10 { min-width:200px; flex:1; margin:0.125em;}
+
+
