--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4174,3 +4174,10 @@ input[type="submit"].custom,
 			max-width: 20em;
 			width: 75%;
 		}
+/* to center */
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
