--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2194,6 +2194,21 @@ input, select, textarea {
 			width: 75%;
 		}
 
+	header.minor {
+		margin: 0 0 2em 0;
+		position: relative;
+		text-align: left;
+	}
+
+		header.minor:after {
+			background: #ab1628;
+			content: '';
+			display: inline-block;
+			height: 0.1em;
+			max-width: 20em;
+			width: 75%;
+		}
+
 	footer.major {
 		margin: 4em 0 0 0;
 	}
@@ -4170,13 +4185,13 @@ input[type="submit"].neon,
 			 font-size: 1.35em;
   			cursor: pointer;
   			text-decoration: none;
-  			color: var(#e76278);
-  			border: var(#e76278) 0.125em solid;
+  			color: #ab1628;
+  			border: #ab1628 0.125em solid;
   			border-radius: 0.25em;
   			text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
-			box-shadow: inset 0 0 0.5em 0 var(#e76278), 0 0 0.5em 0 var(#e76278);
+			box-shadow: inset 0 0 0.5em 0 #ab1628, 0 0 0.5em 0 #ab1628;
 			position: relative;
-			filter: blur(.025em);
+			filter: blur(.02em);
 			opacity: 0.9;
 			font-weight: 300;
 			height: 3em;
@@ -4190,19 +4205,21 @@ input[type="submit"].neon,
 			input[type="reset"].neon:hover,
 			input[type="button"].neon:hover,
 			.button.neon:hover {
-				color: #e76278;
+				color: #ab1628;
 				text-shadow: none;
+				filter: blur(.02em);
 			}
 
 			input[type="submit"].neon:active,
 			input[type="reset"].neon:active,
 			input[type="button"].neon:active,
 			.button.neon:active {
-				color: #e13652;
-				 box-shadow: 0 0 2em 0.5em var(#e13652);
+				color: #fcf7f8;
+				 box-shadow: 0 0 2em 0.5em #fcf7f8;
 				 opacity: 0;
-				 background-color: var(#e13652);
+				 background-color: #fcf7f8;
 				 transition: opacity 100ms linear;
+				 filter: blur(.02em);
 			}
 	
 
