--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4144,6 +4144,10 @@ flex-direction: column;
 .div8 { min-width:200px; flex:1; margin:0.125em;}
 .div9 { min-width:200px; flex:1; margin:0.125em;}
 .div10 { min-width:200px; flex:1; margin:0.125em;}
+.div11 { min-width:200px; max-width:75ch; flex:1; margin:0.125em;}
+.div12 { min-width:200px; max-width:75ch; flex:1; margin:0.125em;}
+.div13 { min-width:200px; max-width:75ch; flex:1; margin:0.125em;}
+.div14 { min-width:200px; max-width:75ch; flex:1; margin:0.125em;}
 
 
 /* For custom semibold font */
@@ -4182,7 +4186,7 @@ input[type="submit"].neon,
 		input[type="button"].neon,
 		.button.neon {
 			 display: inline-block;
-			 font-size: 1.35em;
+			 font-size: 1.15em;
   			cursor: pointer;
   			text-decoration: none;
   			color: #ab1628;
@@ -4220,6 +4224,36 @@ input[type="submit"].neon,
 				 background-color: #fcf7f8;
 				 transition: opacity 100ms linear;
 				 filter: blur(.02em);
+			}
+
+			.neon::before {
+  			pointer-events: none;
+ 			content: "";
+  			position: absolute;
+  			background: #ab1628;
+  			top: 90%;
+  			left: 0;
+  			width: 100%;
+  			height: 100%;
+			transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+  			filter: blur(1em);
+  			opacity: 0.6;
+			}
+			
+			.neon:hover,
+			.neon:focus {
+  			color: #fcf7f8;
+  			text-shadow: none;
+			}
+
+			.neon:hover::before,
+			.neon:focus::before {
+  			opacity: 1;
+			}
+			
+			.neon:hover::after,
+			.neon:focus::after {
+  			opacity: 1;
 			}
 	
 
