--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5161,3 +5161,20 @@ overflow: hidden;
 	font-size: 10px;
 	margin: 10px 0 0 0;
 }
+
+
+.toast-bg {
+  opacity: 0.6;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+}
+
+div.transbox {
+  margin-top: 3rem;
+  object-fit: cover;
+  background-color: black;
+  opacity: 0.8;
+}
