--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5245,7 +5245,7 @@ div.transbox {
 .prev,
 .next {
   cursor: pointer;
-  position: absolute;
+  position: relative;
   top: 50%;
   width: auto;
   padding: 16px;
@@ -5261,7 +5261,7 @@ div.transbox {
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
+  right: -340px;
   border-radius: 3px 0 0 3px;
 }
 
