--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5724,7 +5724,7 @@ img.hover-shadow {
       z-index: 1;
     }
 
-    body.is-article-visible #bg:after {
+    body.is-dimarticle-visible #bg:after {
       -moz-transform: scale(1.0825);
       -webkit-transform: scale(1.0825);
       -ms-transform: scale(1.0825);
@@ -5949,7 +5949,7 @@ img.hover-shadow {
       border-left: 0;
     }
 
-    body.is-article-visible #dimension {
+    body.is-dimarticle-visible #dimension {
       -moz-transform: scale(0.95);
       -webkit-transform: scale(0.95);
       -ms-transform: scale(0.95);
@@ -6091,7 +6091,7 @@ img.hover-shadow {
     z-index: 3;
   }
 
-    #main article {
+    #main dimarticle {
       -moz-transform: translateY(0.25rem);
       -webkit-transform: translateY(0.25rem);
       -ms-transform: translateY(0.25rem);
@@ -6109,7 +6109,7 @@ img.hover-shadow {
       opacity: 0;
     }
 
-      #main article.active {
+      #main dimarticle.active {
         -moz-transform: translateY(0);
         -webkit-transform: translateY(0);
         -ms-transform: translateY(0);
@@ -6117,7 +6117,7 @@ img.hover-shadow {
         opacity: 1;
       }
 
-      #main article .close {
+      #main dimarticle .close {
         display: block;
         position: absolute;
         top: 0;
@@ -6130,7 +6130,7 @@ img.hover-shadow {
         white-space: nowrap;
       }
 
-        #main article .close:before {
+        #main dimarticle .close:before {
           -moz-transition: background-color 0.2s ease-in-out;
           -webkit-transition: background-color 0.2s ease-in-out;
           -ms-transition: background-color 0.2s ease-in-out;
@@ -6149,21 +6149,21 @@ img.hover-shadow {
           background-repeat: no-repeat;
         }
 
-        #main article .close:hover:before {
+        #main dimarticle .close:hover:before {
           background-color: rgba(255, 255, 255, 0.075);
         }
 
-        #main article .close:active:before {
+        #main dimarticle .close:active:before {
           background-color: rgba(255, 255, 255, 0.175);
         }
 
     @media screen and (max-width: 736px) {
 
-      #main article {
+      #main dimarticle {
         padding: 3.5rem 2rem 0.5rem 2rem ;
       }
 
-        #main article .close:before {
+        #main dimarticle .close:before {
           top: 0.875rem;
           left: 0.875rem;
           width: 2.25rem;
@@ -6175,7 +6175,7 @@ img.hover-shadow {
 
     @media screen and (max-width: 480px) {
 
-      #main article {
+      #main dimarticle {
         padding: 3rem 1.5rem 0.5rem 1.5rem ;
       }
 
@@ -6202,7 +6202,7 @@ img.hover-shadow {
       text-transform: uppercase;
     }
 
-    body.is-article-visible #dimfooter {
+    body.is-dimarticle-visible #dimfooter {
       -moz-transform: scale(0.95);
       -webkit-transform: scale(0.95);
       -ms-transform: scale(0.95);
@@ -6221,3 +6221,4 @@ img.hover-shadow {
     @-ms-viewport {
     width: device-width;
   }
+  
